Fixed table on mobile - Added classes to titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,13 @@ body {
   margin: 0 auto;
 }
 
+.table-responsive {
+  display: inline-table;
+}
+
 .table-dark td {
-  padding-left: 6px;
-  padding-right: 6px;
+  /* padding-left: 6px;
+  padding-right: 6px; */
   font-size: 0.8em;
 }
 
@@ -64,6 +68,12 @@ a.bar {
 .display-4 {
   font-size: 2.5rem;
 }
+
+/* .titles {
+  font-size: 1.5rem;
+  color: rgba(223, 105, 26, 1);
+  text-shadow: 1px 1px 2px rgba(223, 105, 26, 0.5);
+} */
 
 .disabled {
   opacity: 1 !important;
@@ -180,6 +190,11 @@ button.btn:focus {
     display: block;
     line-height: 2em;
   }
+
+  /* .titles {
+    font-size: 2.5rem;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4);
+  } */
 
   .table-dark td {
     padding-left: 12px;
